Math library #2 Move to JUnit 5